feat: Enhance UI with scroll-aware navbar, animated background, floating hero, and update profile details.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="#" class="logo" id="nav-logo">Profile</a>
+            <a href="#" class="logo" id="nav-logo">Portfolio</a>
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
                 <span></span>
