feat: Update portfolio data across all sections and implement visit tracking.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             <div id="footer-info">
                 <!-- Content injected by JS -->
             </div>
-            <p class="copyright">&copy; <span id="year"></span>. All rights reserved.</p>
+            <p class="copyright">&copy; <span id="year"></span>. All rights reserved. | Visits: <span id="visit-count">...</span></p>
         </div>
     </footer>
 
